--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
  
     <header>
         <nav>
-            <div class="header_logo"><a href="#"></a></div>
+            <div class="header_logo"><a href="https://minkyung05.github.io/avatar_group_pj_new/"></a></div>
             <div class="menu_icon"><span class="sticks"></span></div>
         </nav>
         <ul class="header_menu">
-            <li><a href="index.html" id="home" class="active">Home</a></li>
+            <li><a href="https://minkyung05.github.io/avatar_group_pj_new/" id="home" class="active">Home</a></li>
             <li><a href="#" id="character">Character</a></li>
             <li><a href="https://lej99.github.io/team_project/production.html" id="production">Production </a></li>
             <li><a href="https://lej99.github.io/team_project/gallery.html" id="gallery">Gallery </a></li>
@@ -79,9 +79,11 @@
 
 
     <div id="slider">
-        <video src="video/AVATAR2_용량적음.mp4#t=10,100" loop autoplay muted></video>
+        <video src="video/AVATAR2_용량적음.mp4#t=10,95" loop autoplay muted></video>
         <div id="text">
-            <span>판도라 행성에서 여러분의 모험을 시작하세요.</span>
+            <span id="desktop-tt">판도라 행성에서 여러분의 모험을 시작하세요.</span>
+            <span id="mobile-tt">판도라에 오신 여러분을 환영합니다.<br>
+            지금 모험을 시작하세요!</span>
             <img src="img/down-arrow.png" id="main-arrow">
         </div>
     </div>
@@ -333,10 +335,11 @@
     </div>
 
     <div id="directortext">
-        <span> 전 세계 영화계를 장악한 아바타의 위상을 확인해보세요!</span>
-        Building upon the world we created with 'Avatar' has been a rare and incredibly rewarding experience.<br>
+        <span id="desktop-ditt"> 전 세계 영화계를 장악한 아바타의 위상을 확인해보세요!</span>
+        <span id="mobile-ditt"> 전 세계 영화계를 장악한 <br> 아바타의 위상을 확인해보세요!</span>
+        Building upon the world we created with 'Avatar' has been a rare and incredibly rewarding experience.
          In writing the new films, I've come to realize that 'Avatar's world, story and characters have become 
-         even richer than I anticipated, <br> and it became apparent that two films would not be enough to capture everything 
+         even richer than I anticipated, and it became apparent that two films would not be enough to capture everything 
          I wanted to put on screen. - James Cameron
         </div>
 
