--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         </nav>
         <ul class="header_menu">
             <li><a href="https://minkyung05.github.io/avatar_group_pj_new/" id="home" class="active">Home</a></li>
-            <li><a href="#" id="character">Character</a></li>
+            <li><a href="https://zhzhahd.github.io/avatar/character.html" id="character">Character</a></li>
             <li><a href="https://lej99.github.io/team_project/production.html" id="production">Production </a></li>
             <li><a href="https://lej99.github.io/team_project/gallery.html" id="gallery">Gallery </a></li>
-            <li><a href="#" id="goods">Goods</a></li>
+            <li><a href="https://zhzhahd.github.io/avatar/goods.html" id="goods">Goods</a></li>
         </ul>
     </header>
 
@@ -49,7 +49,7 @@
         <div id="count-wrap">
        
             <h1>아바타:물의길<br>
-                전 세계 최초 대한민국 상륙!</h1>
+                전 세계 최초 대한민국 상륙까지!</h1>
             <div id="clockdiv">
                 <div>
                     <span id="days"></span>
